--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Milky_Way_Back
 
 # My SQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/milkyway?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=wkddbqls0901
+spring.datasource.url=jdbc:mysql://<ip>:<port>/milkyway?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=
+spring.datasource.password=
 
 # ?? ??
 spring.jpa.show-sql=true
